--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Database=db;Uid=root;Pwd=mysql;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
